# nepi_ai_frameworks

./: .gitmodules  ADD_NEW_AI_MODEL_AND_FRAMEWORK.md  CLAUDE.md  LICENSE  README.md
nepi_aif_hailo/: CMakeLists.txt  package.xml
nepi_aif_hailo/api/: aif_hailo_if.py
nepi_aif_hailo/params/: aif_hailo_params.yaml
nepi_aif_hailo/scripts/: nepi_ai_hailo_detection_node.py
nepi_aif_yolo26/: CMakeLists.txt  README.md  package.xml
nepi_aif_yolo26/api/: aif_yolo26_if.py
nepi_aif_yolo26/params/: aif_yolo26_params.yaml
nepi_aif_yolo26/scripts/: nepi_ai_yolo26_detection_node.py
nepi_aif_yolov11/api/: aif_yolov11_if.py
nepi_aif_yolov11/scripts/: nepi_ai_yolov11_detection_node.py
nepi_aif_yolov8/api/: aif_yolov8_if.py
nepi_aif_yolov8/scripts/: nepi_ai_yolov8_detection_node.py
