<?xml version="1.0"?>
<package format="2">
  <name>nepi_aif_hailo</name>
  <version>0.0.0</version>
  <description>Files for nepi hailo ai framework support</description>

  <maintainer email="nepi@numurus.com">numurus</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
